Updated files with proper headers and footers.

--- a/DixxieMae_Graphics/css/dixxiemae.css
+++ b/DixxieMae_Graphics/css/dixxiemae.css
@@ -10,28 +10,169 @@ body {
 }
 
 h1 {
-	font-size: 5.23rem;
-	color: #000;
-	text-transform: uppercase;
-	font-weight: bold;
-	line-height: 1.2;
+	font-size: 8rem;
+	color: #fff;
 }
-h5 {
-	font-size: 2.5rem;
-	color: #000
+
+h3 {
+	font-size: 4rem;
+	color: #fff;
 	font-weight: normal;
-	line-height: 1.5;
+	
 }
+
+ul {
+	list-style-type: none;
+}
+
+img {
+	max-width: 100%
+
+}
+
+a:link {
+	text-decoration: none;
+  	font-size: 25px;
+	color: #fff;
+	padding: 9px 9px 3px 9px;
+}
+
+a:visited {
+	color: #fff;
+	/*color: #f8e4f1;*/
+}
+
+a:hover {
+  color: red;
+}
+
+a:active {
+  color: darkred;
+}
+
 
 
 
 
 /*Header Styling*/
 .main-header {
- 
+	height: 200px;
+	width: 100%;
+	background: #facce9 url('../img/johnnie_banner_1_by_dixxiemae-d5hdtyl.jpg') no-repeat left;
+	background-size: auto;
+	position: center;
+	font-weight: bold;
 } 
 
-.header-pic {
-	float: center;
+.title {
+	font-family: 'Bangers', cursive;
+	font-weight: bold;
+	float: right;
+	text-shadow: 0 1px 0 #ccc,
+               0 2px 0 #c9c9c9,
+               0 3px 0 #bbb,
+               0 4px 0 #b9b9b9,
+               0 5px 0 #aaa,
+               0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);
+}
+.primary {
+	background: #f8e4f1;
+	background-size: cover; 
+	height: 700px;
+	padding: 50px 20px;
+}
+
+.summary {
+	font-family: 'Oswald';
+	color: grey;
+	font-size: 2.75rem;
+	width: 370px;
+	float:left;
+	margin-left: 10%;
+}
+
+.link-buttons {
+	float: left;
+	width: 40%;
+	padding-left: 10%;
+	/*padding-top: 7%;*/
+	font-family: 'Bangers', cursive;
 
 }
+
+.gallery {
+	display: block;
+	border-width: 40px;
+	float: right;
+	padding-right: 15%
+}
+
+
+.main-footer {
+	background: #facce9;
+	background-size: cover;
+}
+
+.links {
+	text-shadow: 0 1px 0 #ccc,
+               0 2px 0 #c9c9c9,
+               0 3px 0 #bbb,
+               0 4px 0 #b9b9b9,
+               0 5px 0 #aaa,
+               0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);
+}
+
+.inpage1 {
+	width: 350px;
+	height: 100px;
+	margin-top: 15px;
+	background-size: cover;
+	background-image: url(../img/girly_by_dixxiemae-d52jw67.jpg);
+}
+
+.inpage2 {
+	width: 350px;
+	height: 100px;
+	margin: 15px 12.5px 15px 0px;
+	background-size: cover;
+	background-image: url(../img/fourchris.png);
+}
+
+.inpage3 {
+	width: 350px;
+	height: 100px;
+	background-size: cover;
+	background-image: url(../img/buttons.png);
+}
+
+
+
+#top-nav {
+/*	float: right;*/
+	padding: 2.5rem 1.25rem 0rem 0rem;
+	margin-top: 3rem;
+	margin-bottom: 2rem;
+}
+
+#bottom-nav {
+	margin: 30px 0px 15px 0px;
+}
+
+#social-media {
+	float: right;
+	padding: 30px 100px 30px;
+}
+
+
