--- a/DixxieMae_Graphics/css/dixxiemae.css
+++ b/DixxieMae_Graphics/css/dixxiemae.css
@@ -10,12 +10,12 @@ body {
 }
 
 h1 {
-	font-size: 8rem;
+	font-size: 6rem;
 	color: #fff;
 }
 
 h3 {
-	font-size: 4rem;
+	font-size: 3rem;
 	color: #fff;
 	font-weight: normal;
 	
@@ -42,8 +42,7 @@ img {
 
 a:link {
 	text-decoration: none;
-  	font-size: 25px;
-	color: #fff;
+  	color: #fff;
 	/*padding: 9px 9px 3px 9px;*/
 }
 
@@ -68,9 +67,9 @@ a:active {
 .main-header {
 	height: auto;
 	width: 100%;
-	background: #facce9 url('../img/johnnie_banner_1_by_dixxiemae-d5hdtyl.jpg') no-repeat left;
+	background: #facce9 url('../img/johnnie_banner_1_by_dixxiemae-d5hdtyl.png') no-repeat left;
 	background-size: auto;
-	/*position: center;*/
+	position: center;
 	font-weight: bold;
 } 
 
@@ -78,6 +77,7 @@ a:active {
 	font-family: 'Bangers', cursive;
 	font-weight: bold;
 	float: right;
+	margin-right: 5em;
 	padding-bottom: 25px;
 	text-shadow: 0 1px 0 #ccc,
                0 2px 0 #c9c9c9,
@@ -115,6 +115,7 @@ a:active {
 	background: #f8e4f1;
 	background-size: cover; 
 	height: auto;
+	float: left;
 	padding: 50px 20px;
 }
 
@@ -122,9 +123,10 @@ a:active {
 	font-family: 'Oswald';
 	color: grey;
 	font-size: 2.75rem;
-	width: 370px;
-	float:left;
-	margin-left: 10%;
+	width: 480px;
+	float: left;
+	margin: 2% 5% 5% 5%;
+	padding-bottom: 2%;
 }
 
 .summary2 {
@@ -132,7 +134,7 @@ a:active {
 	color: grey;
 	font-size: 1.50em;
 	width: auto;
-	float: center;
+	float: left;
 	padding-top: 10px;
 	margin-left: 10%;
 	margin-right: 10%;
@@ -141,7 +143,7 @@ a:active {
 .link-buttons {
 	float: left;
 	width: 40%;
-	padding: 2em 1em 0em 6em;
+	/*padding: 2em 1em 0em 6em;*/
 	font-family: 'Bangers', cursive;
 
 }
@@ -150,7 +152,7 @@ a:active {
 	display: block;
 	border-width: 40px;
 	float: right;
-	padding-right: 15%
+	padding: 2% 5%;
 }
 
 .gallery {
@@ -178,12 +180,19 @@ a:active {
                0 5px 10px rgba(0,0,0,.25),
                0 10px 10px rgba(0,0,0,.2),
                0 20px 20px rgba(0,0,0,.15);
+    font-size: 1.2em;
+
+}
+
+.inpage1, .inpage2, .inpage3 {
+	width: 480px;
+	height: 100px;
+	display: block;
+	background-size: cover;
+	font-size: 2.5em;
 }
 
 .inpage1 {
-	width: 350px;
-	height: 100px;
-	display: block;
 	/*margin-top: 15px;*/
 	background-size: cover;
 	border-radius: 30px 30px 5px 5px;
@@ -191,18 +200,12 @@ a:active {
 }
 
 .inpage2 {
-	width: 350px;
-	height: 100px;
 	/*margin: 15px 12.5px 15px 0px;*/
-	background-size: cover;
 	border-radius: 5px;
 	background-image: url(../img/fourchris.png);
 }
 
 .inpage3 {
-	width: 350px;
-	height: 100px;
-	background-size: cover;
 	border-radius: 5px 5px 30px 30px;
 	background-image: url(../img/buttons.png);
 }
@@ -212,13 +215,23 @@ a:active {
 	opacity: 0.5;
 }
 
+.contact-form, .contact-form legend {
+	width:300px;
+	margin: 25%;
+}
+
+.contact-text {
+	width: 75%;
+	float:right;
+}
 
 #top-nav {
 	float: left;
-	padding: 2.5rem 1.25rem 0rem 0rem;
-	margin-top: 3rem;
+	font-size: 1.35em;
+/*	padding: 2.5rem 1.25rem 0rem 0rem;*/
+/*	margin-top: 3rem;
 	margin-bottom: 2rem;
-
+*/
 }
 
 #bottom {
