--- a/DixxieMae_Graphics/css/dixxiemae1.css
+++ b/DixxieMae_Graphics/css/dixxiemae1.css
@@ -3,6 +3,7 @@
 
 body {
 	/*padding-top: 70px;*/
+	width: 100%;
 	background-color: #f8e4f1;
 }
 .container {
@@ -127,6 +128,10 @@ a:hover {
 .main-content {
 	padding-bottom: 30px;
 	/*padding-left: 110px;*/
+}
+
+.summary1 {
+	font-size: 1.25em;
 }
 
 .summary2 {
@@ -258,29 +263,40 @@ a:hover {
 
 .social-icon {
 	opacity: 0.75;
-	
 }
 
 .copyright {
-
+	text-align: center;
 }
 
 /* Media Queries */
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
+	
 	#top-nav1 {
 		display: none;
 	}
 }
 
+@media screen and (min-width: 402px) {
+
+	#overlay img {
+		width: auto;	
+	}
+
+
+}
+
 @media screen and (min-width: 768px) {
+	
+	.summary1{
+		font-size: 2.75rem;
+	}
+
 	.social-media {
 		width: 245px;
 	}
 	
-	#overlay img {
-		width: auto;	
-	}
 
 	#bottom-nav1 {
 		display: none;
