Fixed contact page responsiveness

--- a/DixxieMae_Graphics/css/dixxiemae1.css
+++ b/DixxieMae_Graphics/css/dixxiemae1.css
@@ -185,7 +185,8 @@ a:hover {
 
 #contact-form {
 	width: 50%;
-	background-color: #facce9;
+	height: auto;
+	padding-bottom: 25px;
 }
 
 /* Link Buttons*/
