--- a/css/dixxiemae1.css
+++ b/css/dixxiemae1.css
@@ -24,7 +24,7 @@ h2 {
 
 h1,
 h2 {
-	font-family: 'Bangers';
+	font-family: "Bangers";
 	color: #fff;
 	text-shadow: 0 1px 0 #ccc,
                0 2px 0 #c9c9c9,
@@ -112,7 +112,7 @@ a:hover {
 .title3,
 .title4 {
 	position: center;
-	font-family: 'Bangers'; 
+	font-family: "Bangers"; 
 }
 
 /* Body Styling */
@@ -194,7 +194,7 @@ a:hover {
 /* Link Buttons*/
 .link-buttons {
 	width: 100%;
-	font-family: 'Bangers', cursive;
+	font-family: "Bangers", cursive;
 	padding-bottom: 30px;
 }
 
